src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* Monokai palette */
  --monokai-green: #a6e22e;
  --monokai-fuchsia: #f92672;
  --monokai-cyan: #66d9ef;
  --monokai-yellow: #e6db74;
  --monokai-purple: #ae81ff;
  --monokai-orange: #fd971f;
  --monokai-grey: #888888;

  /* VSCode light modern palette */
  --vscode-green: #008000;
  --vscode-purple: #f92672;
  --vscode-magenta: #af00db;
  --vscode-blue: #0000ff;
  --vscode-yellow: #795e26;
  --vscode-cyan: #267f99;
  --vscode-darkblue: #001080;
}

html,
body {
  height: 100%;
  margin: 0;
}

/* ------------------------- SelectList component styles ------------------------- */
.selectlist-box {
  @apply m-2 flex flex-grow flex-col-reverse overflow-auto rounded border border-gray-400 p-1;
  @media (prefers-color-scheme: dark) {
    background-color: #272822;
  }
}

.selectlist-item {
  @apply block p-0.5 font-mono text-sm; /* add border-t if required */
  @apply dark:border-gray-700;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  @media (prefers-color-scheme: dark) {
    color: #a6e22e; /* Monokai green by default */
  }
}

.selectlist-item i {
  @apply bg-blue-200 not-italic;
  @media (prefers-color-scheme: dark) {
    background-color: hsl(50, 11%, 25%);
  }
}

.selectlist-sel {
  @apply bg-blue-300;
  @media (prefers-color-scheme: dark) {
    background-color: hsl(50, 11%, 33%);
  }
}

.selectlist-hover:hover {
  @apply hover:bg-blue-100 dark:hover:bg-[#414339];
}

.selectlist-input {
  @apply m-2 rounded border border-gray-400 p-1 font-mono focus:outline-none;
  @apply dark:bg-gray-800 dark:text-gray-200;
  @media (prefers-color-scheme: dark) {
    color: #e6db74;
  }
}

/* ------------------------- DirHistory overrides to SelectList ------------------------- */
.dirhistory .selectlist-item {
  @media (prefers-color-scheme: dark) {
    color: var(--monokai-cyan);
  }
}

/* ------------------------- Directory entry styles ------------------------- */
.dir-permissions {
  @apply hl-dir-permissions overflow-x-clip pl-1 pr-2;
}
.dir-user {
  @apply hl-dir-user w-16 overflow-x-clip pl-1 pr-1 text-center font-sans;
}
.dir-size {
  @apply hl-dir-size w-16 overflow-x-clip pr-4 text-right font-sans;
}
.dir-date {
  @apply hl-dir-date w-40 overflow-x-clip whitespace-pre pr-4 text-right;
}
.dir-file {
  @apply flex-1 overflow-x-clip overflow-ellipsis;
}

@media (prefers-color-scheme: dark) {
  .hl-dir-permissions {
    color: var(--monokai-fuchsia);
  }
  .hl-dir-user,
  .hl-dir-group {
    color: var(--monokai-green);
  }
  .hl-dir-size {
    color: var(--monokai-orange);
  }
  .hl-dir-date {
    color: var(--monokai-purple);
  }
}

@media (prefers-color-scheme: light) {
  .hl-dir-permissions {
    color: var(--vscode-purple);
  }
  .hl-dir-user,
  .hl-dir-group {
    color: var(--vscode-green);
  }
  .hl-dir-size {
    color: var(--vscode-cyan);
  }
  .hl-dir-date {
    color: var(--vscode-magenta);
  }
}

/* ------------------------- Comand history syntax highlight ------------------------- */
@media (prefers-color-scheme: dark) {
  .hl-unknown {
    color: var(--monokai-orange);
  }
  .hl-program {
    color: var(--monokai-green);
  }
  .hl-builtin {
    color: var(--monokai-green);
    text-decoration: underline;
  }
  .hl-alias {
    color: var(--monokai-green);
    text-decoration: underline;
  }
  .hl-commandError {
    color: var(--monokai-fuchsia);
  }
  .hl-assignment {
    color: var(--monokai-fuchsia);
  }
  .hl-parameter {
    color: var(--monokai-cyan);
  }
  .hl-environment {
    color: var(--monokai-yellow);
  }
  .hl-option {
    color: var(--monokai-purple);
  }
  .hl-quote {
    color: var(--monokai-orange);
  }
  .hl-comment {
    color: var(--monokai-grey);
  }
}

@media (prefers-color-scheme: light) {
  .hl-unknown {
    color: var(--vscode-cyan);
  }
  .hl-program {
    color: var(--vscode-green);
  }
  .hl-builtin {
    color: var(--vscode-green);
    text-decoration: underline;
  }
  .hl-alias {
    color: var(--vscode-green);
    text-decoration: underline;
  }
  .hl-commandError {
    color: var(--vscode-purple);
  }
  .hl-assignment {
    color: var(--vscode-purple);
  }
  .hl-parameter {
    color: var(--vscode-blue);
  }
  .hl-environment {
    color: var(--vscode-yellow);
  }
  .hl-option {
    color: var(--vscode-magenta);
  }
  .hl-quote {
    color: var(--vscode-cyan);
  }
  .hl-comment {
    color: var(--vscode-darkblue);
  }
}

